--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <body>
     <div id="root"></div>
     <!-- Vite will inject the correct script automatically -->
-    <script type="module" src="/src/app.jsx"></script>
+    <script type="module" src="./src/App.jsx"></script>
   </body>
 </html>
