--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdallah Naser - Full-Stack Developer</title>
-    <link rel="icon" href="/src/pro.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/pro.jpg" />
   </head>
   <body>
     <div id="root"></div>
