--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/pro.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Abdallah Naser - Full-Stack Developer Portfolio">
     <title>Abdallah Naser - Full-Stack Developer</title>
-    <link rel="icon" href="%PUBLIC_URL%/pro.jpg" />
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
