--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/profile/pro.jpg" />
+    <link rel="icon" type="image/jpeg" href="/profile/assets/pro-CaGE2Qhy.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Abdallah Naser - Full-Stack Developer Portfolio">
     <title>Abdallah Naser - Full-Stack Developer</title>
